# CADomatic

./: .gitignore  README.md  app.py  main.py  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
app/: app.py  app_prompt.txt  process.py
prompts/: base_instruction.txt  example_code.txt
src/: llm_client.py  load_environment.py  rag_builder.py  rag_extender.py  run_freecad.py
src/image_compare/: vlm_client.py
test/: test_llm_client.py
tests/: test_constants.py  test_main.py  test_main_simple.py
